--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
             <nav class="boutons">
                 <ul class="menu">
-                    <li><a href="hebergements.html">Hébergements</a></li>
-                    <li><a href="activites.html">Activités</a></li>
+                    <li><a class="btn-hebergements" href="hebergements.html">Hébergements</a></li>
+                    <li><a class="btn-activites" href="activites.html">Activités</a></li>
                 </ul>
             </nav>
 
@@ -52,6 +52,126 @@
 
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
+                    <div class="hebergements-title">
+                        <h2 class="section-title">Hébergements à Marseille</h2>
+                    
+                    </div>
+
+
+                    <div class="hebergements-cards">
+                        <a href="#">
+                            <article class="hebergement-card">
+                                <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre montrant deux lits simple">
+                                
+                                        <h3 class="card-title">Hôtel du port</h3>
+                                        <p class="card-subtitle">Nuit à partir de 52</p><span class="euro">€</span></p>
+                                    <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                            </article>
+                        </a>
+
+                        <a href="#">
+                            <article class="hebergement-card">
+                                <img src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre montrant deux lits simple et un bureau">
+                                        <h3 class="card-title">Hôtel chez Amina</h3>
+                                        <p class="card-subtitle">Nuit à partir de 96</p><span class="euro">€</span></p>
+                                    <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                    </div>
+                            </article>
+                        </a>
+
+                        <a href="#">
+                            <article class="hebergement-card">
+                                <img src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre montrant un lit et un placard">
+                                    <div class="cartes-textes">
+                                        <h3 class="card-title">Hôtel les mouettes</h3>
+                                        <p class="card-subtitle">Nuit à partir de 76</p><span class="euro">€</span></p>
+                                    <div class="card-rating">
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                            <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                            <span class="sr-only">Note de 4 sur 5</span>
+                                </div>
+                            </article>
+                        </a>
+                    </div>
+
+                    <div class="hebergements-cards">
+                    <a href="#">
+                        <article class="hebergement-card">
+                            <img src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre montrant un lit deux places et un tableau">
+                                <div class="cartes-textes">
+                                    <h3 class="card-title">Hôtel de la mer</h3>
+                                    <p class="card-subtitle">Nuit à partir de 46</p><span class="euro">€</span></p>
+                                <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                            </div>
+                        </article>
+                    </a>
+
+                    <a href="#">
+                        <article class="hebergement-card">
+                            <img src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre montrant un lit superposé">
+                                <div class="cartes-textes">
+                                    <h3 class="card-title">Auberge de la Canebière</h3>
+                                    <p class="card-subtitle">Nuit à partir de 25</p><span class="euro">€</span></p>
+                                <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                            </div>
+                        </article>
+                    </a>
+
+                    <a href="#">
+                        <article class="hebergement-card">
+                            <img src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre montrant un lit et un placard">
+                                <div class="cartes-textes">
+                                    <h3 class="card-title">Auberge La Panier</h3>
+                                    <p class="card-subtitle">Nuit à partir de 23</p><span class="euro">€</span></p>
+                                <div class="card-rating">
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
+                                        <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
+                                        <span class="sr-only">Note de 4 sur 5</span>
+                            </div>
+                        </article>
+                    </a>
+                    </div>
+
+
+
+
+
+
+
+
+
+
 
                 </section>
                 <section class="populaires">
