--- a/index.html
+++ b/index.html
@@ -300,28 +300,36 @@
 
         <footer>
             <section class="footer">
-                <div class="footer-cards-title">
-                    <h3 class="footer-title">A propos</h3>
-                    <h3 class="footer-title">Nos hébergements</h3>
-                    <h3 class="footer-title">Assistance</h3>
+                <article class="footer-article">
+                <div class="footer-title-one">
+                    <h3>A propos</h3>
                 </div>
-                
                 <div class="footer-content">
-                    <a href="#" class="footer-link">Fonctionnement du site</a>
-                    <a href="#" class="footer-link">Charte qualité</a>
-                    <a href="#" class="footer-link">Centre d'aide</a>
+                    <a href="#" class="footer-link-one">Fonctionnement du site</a>
+                    <a href="#" class="footer-link-one">Conditions générales</a>
+                    <a href="#" class="footer-link-one">Données et confidentialité</a>
                 </div>
+                </article>
 
-                <div class="footer-content-two">
-                    <a href="#" class="footer-link">Conditions générales</a>
-                    <a href="#" class="footer-link">Proposer votre hôtel</a>
-                    <a href="#" class="footer-link">Nous contacter</a>
+                <article class="footer-article">
+                <div class="footer-title-two">
+                    <h3>Nos hébergements</h3>
                 </div>
+                <div class="footer-content">
+                    <a href="#" class="footer-link-two">Charte qualité</a>
+                    <a href="#" class="footer-link-two">Proposer votre hôtel</a>
+                </div>
+                </article>
 
-                <div class="footer-content-three">
-                    <a href="#" class="footer-link">Données et confidentialité</a>
-                    
+                <article class="footer-article">
+                <div class="footer-title-three">
+                    <h3>Assistance</h3>
                 </div>
+                <div class="footer-content">
+                    <a href="#" class="footer-link-three">Centre d'aide</a>
+                    <a href="#" class="footer-link-three">Nous contacter</a>
+                </div>
+                </article>
 
 
             </section>
