--- a/index.html
+++ b/index.html
@@ -338,6 +338,6 @@
 
         </footer>
     </div>
+    <script src="https://kit.fontawesome.com/3a62503aaf.js" crossorigin="anonymous"></script>
 </body>
-
 </html>
