--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
 
             <form class="conteneur-recherche">
+                <i class="fa-solid fa-location-dot"></i>
                 <input type="text" id="recherche" class="case-recherche" placeholder="Rechercher..."> 
                 <button type="submit">Rechercher</button>
             </form>
@@ -43,12 +44,14 @@
             <div class="filtres">
                 <h3 class="sous-sous-titres">Filtres</h3>
                 <ul class="boutons-filtres">
-                    <li>Economique</li>
-                    <li>Familial</li>
-                    <li>Romantique</li>
-                    <li>Nos pépites</li>
+                    <li><i class="fa-solid fa-money-bill-wave"></i> Economique</li>
+                    <li><i class="fa-solid fa-person"></i> Familial</li>
+                    <li><i class="fa-solid fa-heart"></i> Romantique</li>
+                    <li><i class="fa-solid fa-fire"></i> Nos pépites</li>
                 </ul>
             </div>
+
+            <div class="infos"><i class="fa-solid fa-info"></i>Plus de 500 logements sont disponible dans cette ville</div>
 
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
