--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    </header>
+    <header>
     <div class="main-container">
         <header class="header">
             <div class="logo">
@@ -38,7 +38,8 @@
             <form class="conteneur-recherche">
                 <i class="fa-solid fa-location-dot"></i>
                 <input type="text" id="recherche" class="case-recherche" placeholder="Rechercher..."> 
-                <button type="submit">Rechercher</button>
+                <button id="btnDesktop" type="submit">Rechercher</button>
+                <button id="btnMobile" type="submit" ><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
 
             <div class="filtres">
@@ -51,7 +52,12 @@
                 </ul>
             </div>
 
-            <div class="infos"><i class="fa-solid fa-info"></i>Plus de 500 logements sont disponible dans cette ville</div>
+            <div class="infos">
+                <span class="information">
+                    <i class="fa-solid fa-info"></i>
+                </span>
+               
+                Plus de 500 logements sont disponible dans cette ville</div>
 
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
