--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booki</title>
+    <script src="https://kit.fontawesome.com/3a62503aaf.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
 </head>
 
 <body>
-
+<!--Header-->
     <div class="main-container">
         <header class="header">
             <div class="logo">
@@ -23,12 +24,15 @@
             </div>
             <nav class="boutons">
                 <ul class="menu">
-                    <li><a class="btn-hebergements" href="hebergements.html">Hébergements</a></li>
-                    <li><a class="btn-activites" href="activites.html">Activités</a></li>
+                    <li><a class="btn-hebergements" href="#hebergements">Hébergements</a></li>
+                    <li><a class="btn-activites" href="#activites">Activités</a></li>
                 </ul>
             </nav>
         </header>
+<!--Fin Header-->
 
+
+<!--Menu Recherche-->
         <main>
             <div class="conteneur">
                 <h2 class="sous-titres">Trouvez votre hébergement pour des vacances de rêves</h2>
@@ -60,8 +64,12 @@
                 Plus de 500 logements sont disponible dans cette ville
             </div>
 
+<!--Fin Menu Recherche-->
+
             <div class="hebergements-and-populaires">
-                <section class="hebergements">
+
+<!--Hebergements-->
+                <section id="hebergements">
                     <div class="hebergements-title">
                         <h2 class="section-title">Hébergements à Marseille</h2>
 
@@ -191,11 +199,11 @@
                         <a href="afficher-plus">Afficher plus</a>
                     </div>
                 </section>
+<!--Fin Hebergements-->
 
 
 
-
-
+<!--Populaires-->
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
@@ -266,8 +274,11 @@
                 </section>
             </div>
             <br>
+<!--Fin Populaires-->
 
-            <section class="activites">
+
+<!--Activites-->
+            <section id ="activites">
                 <div class="activites-title">
                     <h2 class="activites-title">Activités à Marseille</h2>
                 </div>
@@ -316,9 +327,9 @@
                 </div>
             </section>
         </main>
+<!--Fin Activites-->
 
-
-
+<!--Footer-->
         <footer>
             <section class="footer">
                 <article class="footer-article">
@@ -354,12 +365,9 @@
 
 
             </section>
-
-
-
         </footer>
+<!--Fin Footer-->
     </div>
-    <script src="https://kit.fontawesome.com/3a62503aaf.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
